--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -42,6 +42,7 @@
     {{ content_for_header }}
 
     <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
+    <link rel="stylesheet" href="{{ 'custom-mega-menu.css' | asset_url }}">
 
     {% render 'microdata-schema' %}
 
