--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -572,6 +572,17 @@
       ]
     },
     {
+      "type": "variant_description",
+      "name": "Variant Description",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "paragraph",
+          "content": "Display the description for the currently selected variant using metafields."
+        }
+      ]
+    },
+    {
       "type": "description",
       "name": "Description",
       "limit": 1,
