--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -16,6 +16,11 @@
           {%- when 'variant_selector' -%}
             {%- render 'product-variant-selector', product: product, form: form, block: block -%}
 
+          {%- when 'variant_description' -%}
+            <div class="product-meta__variant-description rte" {{ block.shopify_attributes }}>
+              {{ selected_variant.metafields.custom.variant_description }}
+            </div>
+
           {%- when 'buy_buttons' -%}
             {%- render 'product-buy-buttons', product: product, form: form, block: block -%}
 
@@ -124,11 +129,36 @@
               "inventory_management": {{ variant.inventory_management | json }},
               "inventory_policy": {{ variant.inventory_policy | json }},
               "inventory_quantity": {{ variant.inventory_quantity | json }},
-              "inventory_message": {{ inventory_message | json }}
+              "inventory_message": {{ inventory_message | json }},
+              "variant_description": {{ variant.metafields.custom.variant_description | json }}
             }{% unless forloop.last %},{% endunless %}
           {%- endfor -%}
         }
       {%- endif -%}
     }
+  </script>
+
+  <script>
+    document.addEventListener('variant:changed', function(event) {
+      const variant = event.detail.variant;
+      const container = document.querySelector('.product-meta__variant-description');
+
+      if (container && variant) {
+        // We get the data from the product JSON which we already augmented
+        const productJson = document.querySelector('[data-product-json]');
+        if (productJson) {
+           const productData = JSON.parse(productJson.textContent);
+           const variantData = productData.inventories ? productData.inventories[variant.id] : null;
+           
+           if (variantData && variantData.variant_description) {
+             container.innerHTML = variantData.variant_description;
+             container.style.display = '';
+           } else {
+             container.innerHTML = '';
+             container.style.display = 'none';
+           }
+        }
+      }
+    });
   </script>
 </div>
