--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -577,8 +577,26 @@
       "limit": 1,
       "settings": [
         {
-          "type": "paragraph",
-          "content": "Display the description for the currently selected variant using metafields."
+          "type": "text",
+          "id": "title",
+          "label": "Heading",
+          "default": "Variant Details"
+        },
+        {
+          "type": "select",
+          "id": "display_mode",
+          "label": "Display mode",
+          "options": [
+            {
+              "value": "collapse",
+              "label": "Collapse"
+            },
+            {
+              "value": "show_all",
+              "label": "Show all"
+            }
+          ],
+          "default": "show_all"
         }
       ]
     },
