--- a/assets/theme.css
+++ b/assets/theme.css
@@ -13815,3 +13815,13 @@ shopify-payment-terms {
   .product-block-list__item--description .card,
   .product-block-list__item--variant-description .card { height: 100%; }
 }
+
+/* Force 2-Column for Description blocks */
+@media screen and (min-width: 1000px) {
+  .product-block-list__wrapper { display: grid !important; grid-template-columns: repeat(2, 1fr); grid-gap: 30px; }
+  .product-block-list__item { grid-column: span 2; } /* Most things stay full width */
+  .product-block-list__item--gallery { grid-column: span 1; }
+  .product-block-list__item--info { grid-column: span 1; }
+  .product-block-list__item--description,
+  .product-block-list__item--variant-description { grid-column: span 1 !important; }
+}
