--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -18,6 +18,34 @@
           {%- when 'variant_selector' -%}
             {%- render 'product-variant-selector', product: product, form: form, block: block -%}
 
+          {%- when 'variant_description' -%}
+            {%- assign variant_desc = selected_variant.metafields.custom.variant_description.value | default: selected_variant.metafields.custom.variant_description -%}
+            {%- assign variant_desc_stripped = variant_desc | strip_html | strip -%}
+            
+            <div class="product-meta__variant-description-container {% if variant_desc_stripped == blank %}is-hidden{% endif %}" {{ block.shopify_attributes }}>
+              {%- if block.settings.display_mode == 'collapse' -%}
+                <button class="product-meta__variant-description-button" data-action="toggle-collapsible" aria-expanded="false" aria-controls="variant-desc-{{ section.id }}-{{ block.id }}">
+                  <span class="product-meta__variant-description-title heading">{{ block.settings.title | escape }}</span>
+                  <span class="plus-button"></span>
+                </button>
+
+                <div id="variant-desc-{{ section.id }}-{{ block.id }}" class="card__collapsible">
+                  <div class="card__collapsible-content">
+                    <div class="product-meta__variant-description-content rte">
+                      {{ variant_desc }}
+                    </div>
+                  </div>
+                </div>
+              {%- else -%}
+                {%- if block.settings.title != blank -%}
+                  <span class="product-meta__variant-description-title heading">{{ block.settings.title | escape }}</span>
+                {%- endif -%}
+
+                <div class="product-meta__variant-description-content rte">
+                  {{ variant_desc }}
+                </div>
+              {%- endif -%}
+            </div>
 
           {%- when 'buy_buttons' -%}
             {%- render 'product-buy-buttons', product: product, form: form, block: block -%}
