Add: Dimensions/Specs block and dynamic metafield syncing

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -572,6 +572,35 @@
       ]
     },
     {
+      "type": "dimensions",
+      "name": "Dimensions/Specs",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Heading",
+          "default": "Dimensions"
+        },
+        {
+          "type": "select",
+          "id": "display_mode",
+          "label": "Display mode",
+          "options": [
+            {
+              "value": "collapse",
+              "label": "Collapse"
+            },
+            {
+              "value": "show_all",
+              "label": "Show all"
+            }
+          ],
+          "default": "show_all"
+        }
+      ]
+    },
+    {
       "type": "variant_description",
       "name": "Variant Description",
       "limit": 1,
